# Authentication-Service

./: pyproject.toml
authentication/: exceptions.py  models.py  serializers.py  urls.py  utils.py  views.py
authentication/migrations/: 0001_initial.py  0002_add_db_level_cascade.py  0003_alter_token_purpose.py
authentication/models/: token.py  user.py
authentication/serializers/: __init__.py  logout.py  otp.py  password.py  password_management.py  verification.py
authentication/services/: __init__.py  mailing.py  password.py  redis.py  user.py
authentication/services/mailing/: __init__.py  base.py  verification.py  verification_link.py  verification_otp.py
authentication/services/tokens/: __init__.py  base.py  otp.py  ott.py  verification.py
authentication/tasks/: __init__.py  emails.py
authentication/templates/emails/: link.html  verification.html  verification_code.html  verification_email.html  verification_link.html
authentication/tests/integration/: test_password_endpoints.py
authentication/tests/unit/: test_serializers.py
authentication/tests/unit/serializers/: password_auth.py
authentication/views/: __init__.py  logout.py  otp.py  password.py  password_management.py  verification.py
config/: settings.py  urls.py
src/: app.py  database.py
src/auth/: models.py  repository.py  router.py  schemas.py  security.py  service.py  utils.py
utils/: exception_handler.py
