[project]
name = "authentication-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "alembic>=1.18.4",
    "fastapi[standard]>=0.131.0",
    "jinja2>=3.1.6",
    "mysqlclient>=2.2.8",
    "pwdlib[argon2]>=0.3.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.47",
]
